# NMR-RISE

./: .gitignore  README.md  pyproject.toml
data/: README.md
notebooks/data_process/: NMRBank.ipynb  NMRExp.ipynb  USPTO-NMR-790K.ipynb  nmrshiftdb.ipynb
notebooks/llm_rerank/: example.ipynb
notebooks/result_analysis/: analysis.ipynb
notebooks/result_analysis/tables/: final_comparison.csv
notebooks/result_analysis/tables/NMRBank/: mol2nmr.csv  mol2nmr_metric_summary.csv  molref.csv  param.csv
notebooks/result_analysis/tables/NMRExp/: mol2nmr.csv  mol2nmr_metric_summary.csv  molref.csv  param.csv
notebooks/result_analysis/tables/USPTO-NMR/: mol2nmr.csv  mol2nmr_metric_summary.csv  molref.csv  param.csv
prompt/: hnmr_process.txt  perplexity_rerank_rmse.txt
results/: README.md
runs/: README.md
scripts/: README.md
scripts/evaluation/: evaluation.py  evaluation_ablation.py
scripts/mol2nmr/: iterative_finetune.sh
scripts/mol2nmr/configs/: config_data_process.yaml  config_infer.yaml  config_train.yaml
scripts/nmr2mol/: multitask_molref.sh  multitask_nmr2mol.sh
scripts/nmr2mol/configs/: config_predict.yaml  config_train.yaml
scripts/nmr2mol/configs/augment/: no_augment.yaml
scripts/nmr2mol/configs/hydra/: default.yaml
scripts/nmr2mol/configs/model/: bart_medium.yaml  custom_hf_bart.yaml  t5_small.yaml  (+5 more)
src/nmr_rise/mol2nmr/: __init__.py  data_process.py  infer.py  training.py
src/nmr_rise/nmr2mol/: __init__.py  configuration.py  utils.py
src/nmr_rise/utils/: data.py  llm_rerank.py  mmspec.py  mol2nmr.py  nmr2mol.py  nmr_rise.py  nmrbank.py
(+117 files in other folders)
