[project]
name = "project-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.25.0",
    "hydra-core>=1.3.2",
    "datasets==4.2.0",
    "numpy>=1.24.4",
    "pandas>=1.5.3",
    "pytorch-lightning>=2.1.0",
    "rdkit>=2024.9",
    "regex>=2023.8.8",
    "scipy>=1.10.1",
    "tokenizers>=0.13.3",
    "torch>=2.4.0",
    "tqdm>=4.66.1",
    "transformers>=4.32.1,<4.49.0",
    "tensorboard>=2.14.0",
    "scikit-learn>=1.3.2",
    "torchmetrics>=1.2.0",
    "importlib-resources>=6.5.2",
    "click>=8.1.7",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "loguru>=0.7.3",
    "pybaselines>=1.2.0",
    "openpyxl>=3.1.5",
    "matplotlib>=3.10",
    "OpenNMT-py>=3.0.3",
    "pyarrow>=16.1.0",
    "xgboost>=2.0.3",
    "rxn-chem-utils>=1.5.0",
    "ase==3.22.1",
    "openai",
    "unicore",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "volcengine-python-sdk[ark]>=4.0.23",
    "perplexityai>=0.20.0",
    "textdistance>=4.6.3",
]

[tool.uv.sources]
unicore = { path = "unicore-0.0.1+cu118torch2.0.0-cp310-cp310-linux_x86_64.whl" }
